# cartelita

./: .gitignore  AGENTS.md  MANIFESTO.md  README.md
scraper/: .dockerignore  .env.example  Dockerfile  pyproject.toml
scraper/migrations/: 0001_initial.sql  0002_event_annotations.sql  0003_event_start_times.sql
scraper/src/cartelera/: db.py  migrate.py  models.py  queries.py  run.py  seed.py  types.py  upsert.py
scraper/tests/: conftest.py  test_antic_teatre.py  test_ateneu_barcelones.py  test_auditori.py  test_balana.py  test_big_bang.py  test_casa_figari.py  test_cinema_malda.py  test_cinemes_girona.py  test_cines_verdi.py  test_db.py  test_db_url.py  test_eixample_teatre.py  test_espai_brossa.py  test_espai_texas.py  test_filmoteca.py  test_generalitat_carillo.py  test_graner.py  test_harlem_jazz_club.py  test_jamboree.py  test_la_poderosa.py  test_liceu.py  test_meam.py  test_mercat_flors.py  test_migrate.py  test_models.py  test_nau_ivanow.py  test_palau_musica.py  test_phenomena.py  test_price.py  test_queries.py  test_registry.py  test_renoir_floridablanca.py  test_robadors.py  test_run.py  test_sala_beckett.py  test_sala_montjuic.py  test_santa_maria_del_mar.py  test_santa_maria_del_pi.py  test_sat_teatre.py  (+14 more)
scraper/tests/fixtures/: antic_teatre_agenda.html  antic_teatre_detail.html  ateneu_barcelones_agenda.html  ateneu_barcelones_concert.html  balana_borras_api.json  balana_coliseum_api.json  balana_detail_la_promesa.html  balana_detail_patti_lupone.html  balana_tivoli_api.json  big_bang_agenda.html  casa_figari_agenda.html  cinema_malda_agenda.html  (+83 more)
(+141 files in other folders)
