[project]
name = "cartelera"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cartelera = "cartelera.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartelera"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
